--- a/手册/OS/Windows使用/路由配置.md
+++ b/手册/OS/Windows使用/路由配置.md
@@ -6,4 +6,4 @@ windows的路由表，分为活动路由和永久路由。
 
 通过这个面板的配置，其跃点数为：[设定值+10]（例如：设定值为5，这最终跃点数为15）
 
-![路由设置](./1617906135595-7f10537a-4fc5-4003-9d8c-b1e9635b4332.png)
+![路由设置](./RouteConfig1.png)
